# downmark

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  rendering-preview.md  vite.config.ts
.github/workflows/: ci.yml  post-merge-release-build.yml  release.yml
e2e/: slash-commands.spec.ts
landing/: index.html  package-lock.json  package.json
landing/public/: demo-seed.md
landing/scripts/: generate-release-notes.mjs
landing/src/: App.tsx  main.tsx  styles.css  types.ts
landing/src/components/: DemoAppShell.css  DemoAppShell.tsx
landing/src/demo/: createBrowserDemoDependencies.ts
landing/src/downmark-app/: App.tsx
scripts/: repack-unsigned-macos-dmg.sh
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/features/documents/: file-session-manager.ts  markdown-gateway.test.ts  markdown-gateway.ts  types.ts
src/features/editor/: BubbleMenuBar.tsx  ModeToggle.tsx  RawEditorSurface.tsx  RichEditorAdapter.tsx  SlashMenu.tsx  TableEdgeControls.tsx  TableFloatingMenu.tsx  command-registry.test.ts  command-registry.ts  extensions.ts  slash-command-extension.test.ts  slash-command-extension.tsx  table-utils.test.ts  table-utils.ts
src/features/i18n/: locale.test.ts  messages.ts
src/features/runtime/: tauri-runtime.ts
src/features/shell/: shell-integration.ts
src/test/: setup.ts
(+12 files in other folders)
