[package]
name = "downmark"
version = "0.1.2"
description = "A tiny cross-platform markdown editor."
authors = ["Byun"]
edition = "2021"
license = "MIT"

[lib]
name = "downmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sys-locale = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
